force-app/main/default/objects/Data_Category__c/Data_Category__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Data Category</label>
</CustomObject>