force-app/main/default/objects/Data_Category__c/fields/Danish_Description__c.field-meta.xml
<CustomField>
    <fullName>Danish_Description__c</fullName>
    <label>Danish Description</label>
    <type>TextArea</type>
</CustomField>