force-app/main/default/objects/Data_Category__c/fields/Danish_Label__c.field-meta.xml
<CustomField>
    <fullName>Danish_Label__c</fullName>
    <label>Danish Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>