force-app/main/default/objects/Data_Category__c/fields/French_Description__c.field-meta.xml
<CustomField>
    <fullName>French_Description__c</fullName>
    <label>French Description</label>
    <type>TextArea</type>
</CustomField>