force-app/main/default/objects/Data_Category__c/fields/French_Label__c.field-meta.xml
<CustomField>
    <fullName>French_Label__c</fullName>
    <label>French Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>