force-app/main/default/objects/Data_Category__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>